refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -112,7 +112,7 @@
   font-size: 2.6rem;
   line-height:2.7rem;
   text-align: right;
-  margin: 2vh 2vw 0 0;
+  margin: 0 2vw 0 0;
   animation: fadeOut ease-out 3.9s infinite alternate;
 }
 
